<resources>
    <string name="app_name">Outzone</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="menu_asistencia">Asistencia</string>
    <string name="attendance">Asistencia</string>
    <string name="admin_title">Administración</string>
    <string name="communication_title">Comunicación</string>
    <string name="checkin">Asistencia Monitores</string>
    <string name="theme">Tema Oscuro</string>
    <string name="information">Información</string>
    <string name="web">outzone.club</string>
    <string name="title_activity_attendance">AttendanceActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="pick_date">Fecha</string>
    <string name="calendar">Calendario</string>
    <string name="gallery">Galería</string>
    <string name="delete_word_preamble">Borrando usuario:</string>
    <string name="empty_not_saved">Campos incompletos, guardado cancelado.</string>
    <string name="no_usr">Usuario en carga</string>
    <string name="listUsrs">Listar alumnos</string>
    <string name="button_save">Guardar</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="langSelect">Idioma</string>
    <string name="no_event">Cargando eventos...</string>
    <string name="reload">Recargar</string>
    <string name="confirm_delete_title">Borrado</string>
    <string name="confirm_delete_message">¿Borrar elemento?</string>
    <string name="positive">Si</string>
    <string name="negative">No</string>
    <string name="negative_message">Borrado cancelado</string>
    <string name="name_hint">Nombre</string>
    <string name="surname1_hint">Primer apellido</string>
    <string name="surname2_hint">Segundo Apellido</string>
    <string name="dni_hint">DNI</string>
    <string name="date_hint">Fecha de nacimiento</string>
    <string name="calendar_search">Buscar</string>
    <string name="calendar_add_event">Añadir</string>
    <string name="search_hint">Buscar</string>
    <string name="search_event">Buscar evento</string>
    <string name="add_event">Añadir evento</string>
    <string name="cal_name_hint">Evento</string>
    <string name="cal_date_hint">Fecha</string>
    <string name="cal_id_hint">Identificador</string>
    <string name="cal_location_hint">Ubicación(opcional)</string>
    <string name="cal_description_hint">Descripción (opcional)</string>
    <string name="cal_url_hint">URL (opcional)</string>
    <string name="cancel_add_event">Cancelar</string>
    <string name="cal_date">Fecha</string>
    <string name="cal_location">Ubicación</string>
    <string name="cal_description">Descripción</string>
    <string name="cal_url">URL</string>
    <string name="failed_event_add">Datos no válidos. Operación candelada.</string>
    <string name="delete_event_preamble">Borrado evento</string>
    <string name="tools_title">Utilidades</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="login_server_hint">Servidor (ej: algo.com)</string>
    <string name="login_usr_hint">Usuario</string>
    <string name="login_passwd_hint">Contraseña</string>


    <string name="folderName">Nombre del directorio</string>
    <string name="appName">Galería</string>
    <string name="empty">No se han encontrado imágenes</string>
    <string name="photos_name">Imágenes</string>
    <string name="no_Member">Leyendo la base de datos de miembros...</string>
    <string name="wrong_login">Datos de inicio de sesión incorrectos</string>
    <string name="nouser2">Usuario asocia a login no encontrado. Entrando con permisos mínios...</string>
    <string name="permissions_granted">Permisos concedidos correctamente</string>
    <string name="permissions_denied">Permisos denegados, son necesarios para el funcionamiento completo de la aplicación</string>

    <string name="update_card_attendance">Confirmar</string>
    <string name="format_pdf">Generar documento PDF</string>
    <string name="pdf_generated">PDF generado correctamente</string>
    <string name="documents">Documentos compartidos</string>
    <string name="open_with">Abrir PDF con:</string>

    <string name="member_date_hint">Fecha de nacimiento</string>
    <string name="cancel_add_member">Cancelar</string>
    <string name="add_member">Añadir miembro</string>
    <string name="login_error">Error al acceder a los datos del usuario, abortando acceso</string>
    <string name="preference_file_key">com.outzone.main.login</string>
    <string name="login_retrieved_error">Error al acceder a las credenciales guardadas</string>
    <string name="login_with_retrieved">Sesión iniciada con credenciales guardadas</string>
    <string name="system_title">Sistema</string>
    <string name="session">Cerrar sesión</string>
    <string name="check_attendance">Listado de asistentes</string>
    <string name="signup_button">Registrarse</string>
    <string name="remember_session">¿Guardar la contraseña?</string>
    <string name="session_saved">Datos de inicio de sesión guardados</string>

</resources>