<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="0dp"
    style="@style/dialog_info">

    <TextView
        android:id="@+id/event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        style="@style/text_view_title"/>

    <TextView
        android:id="@+id/event_date_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="@color/blue_gray_light"
        android:text="@string/cal_date"
        android:paddingLeft="10dp"/>
    <TextView
        android:id="@+id/event_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_view_element"/>

    <TextView
        android:id="@+id/event_location_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="@color/blue_gray_light"
        android:text="@string/cal_location"
        android:paddingLeft="10dp"/>
    <TextView
        android:id="@+id/event_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_view_element"/>

    <TextView
        android:id="@+id/event_id_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="@color/blue_gray_light"
        android:text="@string/cal_id_hint"
        android:paddingLeft="10dp"/>
    <TextView
        android:id="@+id/event_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_view_element"/>

    <TextView
        android:id="@+id/event_description_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="@color/blue_gray_light"
        android:text="@string/cal_description"
        android:paddingLeft="10dp"/>
    <TextView
        android:id="@+id/event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_view_element"/>

    <TextView
        android:id="@+id/event_url_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="@color/blue_gray_light"
        android:text="@string/cal_url"
        android:paddingLeft="10dp"/>
    <TextView
        android:id="@+id/event_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_view_element"/>

</LinearLayout>