<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/dark_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".activities.LogInActivity"
        android:padding="30dp"
        android:background="@color/dark_gray">

        <ImageView
            android:id="@+id/logo_oz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:clipToPadding="false"
            app:srcCompat="@mipmap/ic_oz_blanco_fg"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usr_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_usr_hint"
            android:inputType="textAutoComplete">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_usr"
                style="@style/text_input_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwd_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_passwd_hint"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_passwd"
                style="@style/text_input_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/server_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_server_hint"
            android:inputType="textAutoComplete">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_server"
                style="@style/text_input_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/save_session_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember_session"
            android:textColor="@color/white"
            android:buttonTint="@color/white"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/loginButton"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button"
                android:background="@drawable/rounded_button"
                android:layout_marginRight="5dp"
                android:textAppearance="@android:style/TextAppearance.Medium"

            />

            <Button
                android:id="@+id/signupButton"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/signup_button"
                android:layout_marginLeft="5dp"
                android:textAppearance="@android:style/TextAppearance.Medium"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>